--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "path": "^0.12.7",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.19.6"
+    "sequelize": "^5.19.6",
+    "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
